# Elastic-Tracker

./: .gitignore  README.md
sh_utils/: land_triger.sh  pub_triger.sh
src/detection/object_detection_msgs/: CMakeLists.txt  package.xml
src/detection/object_detection_msgs/msg/: CarPosition.msg  motorAngle.msg
src/detection/target_ekf/: CMakeLists.txt  package.xml
src/detection/target_ekf/config/: camera.yaml
src/detection/target_ekf/include/target_ekf/: target_ekf.hpp
src/detection/target_ekf/launch/: target_ekf.launch
src/detection/target_ekf/src/: target_ekf_node.cpp  target_ekf_sim_node.cpp
src/mapping/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/mapping/config/: D435.yaml  camera.yaml  rviz_real.rviz  rviz_sim.rviz
src/mapping/include/mapping/: mapping.h
src/mapping/launch/: mapping.launch  run.launch  rviz_real.launch  rviz_sim.launch
src/mapping/src/: mapping.cc  mapping_nodelet.cpp  mapping_vis_node.cpp  visualize_history_path.cpp
src/planning/planning/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/planning/planning/include/env/: env.hpp
src/planning/planning/include/prediction/: prediction.hpp
src/planning/planning/include/visualization/: visualization.hpp
src/planning/planning/include/wr_msg/: wr_msg.hpp
src/planning/planning/launch/: debug.launch  fake_car_target.launch  fake_target.launch  log.launch  planning.launch  simulation1.launch  simulation2.launch  simulation_landing.launch
src/planning/planning/src/: planning_nodelet.cpp  play_bag_node.cpp  test_node.cpp  traj_server.cpp
src/planning/traj_opt/: CMakeLists.txt  package.xml
src/planning/traj_opt/include/traj_opt/: geoutils.hpp  minco.hpp  poly_traj_utils.hpp  root_finder.hpp  sdlp.hpp  traj_opt.h
src/planning/traj_opt/src/: traj_opt.cc  traj_opt_fake.cc
src/quadrotor_msgs/: CMakeLists.txt  package.xml
src/quadrotor_msgs/msg/: OccMap3d.msg  PolyTraj.msg  Px4ctrlDebug.msg  ReplanState.msg
src/uav_simulator/local_sensing/: CMakeLists.txt  package.xml
src/uav_simulator/local_sensing/src/: pcl_render_node.cpp  pointcloud_render_node.cpp
src/uav_simulator/mockamap/: CMakeLists.txt
src/uav_simulator/mockamap/include/: maps.hpp  perlinnoise.hpp
src/uav_simulator/mockamap/src/: ces_randommap.cpp  maps.cpp  mockamap.cpp  perlinnoise.cpp
src/uav_simulator/odom_vis/odom_visualization/: CMakeLists.txt  package.xml
src/uav_simulator/odom_vis/odom_visualization/launch/: real_vis.launch  sim_vis.launch  vins_vis.launch
src/uav_simulator/odom_vis/odom_visualization/src/: odom_visualization.cpp  odom_visualization_car.cpp
src/uav_simulator/so3_controller/: CMakeLists.txt
src/uav_simulator/so3_controller/include/so3_controller/: so3_controller.hpp
src/uav_simulator/so3_controller/src/: so3_controller_nodelet.cpp
src/uav_simulator/so3_quadrotor/: CMakeLists.txt
src/uav_simulator/so3_quadrotor/src/: so3_quadrotor_nodelet.cpp
src/uav_simulator/uav_simulator/: CMakeLists.txt
src/uav_simulator/uav_simulator/config/: mockamap.yaml  so3_quadrotor.yaml
src/uav_simulator/uav_simulator/launch/: uav_simulator.launch
