<?xml version="1.0"?>
<package format="2">
  <name>target_ekf</name>
  <version>0.0.0</version>
  <description>The target_ekf package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>object_detection_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>

</package>