<?xml version="1.0"?>
<package format="2">
  <name>traj_opt</name>
  <version>0.0.0</version>
  <description>The traj_opt package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>